Updated Style of CV and added favicon

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
 body {
     background: whitesmoke;
 }
+
+img {
+    height: 15%;
+    width: 15%;
+    float: right;
+}
+
+table {
+    width: 75%;
+}
