--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,62 @@
-body {
-    background: whitesmoke;
-}
+/* body{
+    background-image: url("../Resume/Background1.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+} */
 
 img {
-    height: 15%;
-    width: 15%;
+    height: auto;
+    width: 20%;
     float: right;
+    border-radius: 100%;
+    box-shadow: 0px 5px 18px black;
+}
+
+.propicture {
+    position: absolute;
+    top: 30px;
+    right: 100px;
 }
 
 table {
     width: 75%;
 }
+
+hr {
+    border-color: #D2B600;
+    margin-right: 100px;
+    margin-top: -0.8em;
+    margin-bottom: 1.0em;
+}
+
+#automation, #education {
+    width: 100%;
+}
+
+#button1 {
+    width: 60px;
+    height: 60px;
+    background-color: #D2B600;
+    border-radius: 50%;
+    border: none;
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+#saveCV {
+    width: 40px;
+    height: 40px;
+}
+
+#download {
+    position: absolute;
+    right: 0;
+    margin-bottom: 100px;
+    margin-right: 5.0em;
+}
+
+
+
